# sieve

./: README.md  pyproject.toml
bench/: conftest.py  test_sieve.py
sieve/: lru.py  sieve.py
