[tool.poetry]
name = "sieve"
version = "0.1.0"
description = ""
authors = ["Matt Fleming <matt@nyrk.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.4"
pytest-benchmark = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
